--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
     "name": "qqnt-improved",
     "version": "0.0.1",
+    "typings": "./dist-typings/index.d.ts",
     "license": "LGPL-3.0",
-    "packageManager": "yarn@3.5.1",
+    "packageManager": "yarn@3.6.0",
     "scripts": {
-        "build": "ts-node build"
+        "dev": "ts-node ./dev.ts",
+        "build": "ts-node ./build.ts"
     },
     "dependencies": {
         "@types/fs-extra": "^11.0.1",
-        "fs-extra": "^11.1.1",
-        "typescript": "^5.0.4"
+        "fs-extra": "^11.1.1"
     },
     "devDependencies": {
         "@types/node": "^20.2.5",
         "@yarnpkg/sdks": "^3.0.0-rc.44",
         "esbuild": "^0.17.19",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.4"
     }
 }
