--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     },
     "dependencies": {
         "@types/fs-extra": "^11.0.1",
-        "fs-extra": "^11.1.1"
+        "fs-extra": "^11.1.1",
+        "semver": "^7.5.1"
     },
     "devDependencies": {
         "@types/node": "^20.2.5",
+        "@types/semver": "^7.5.0",
         "@yarnpkg/sdks": "^3.0.0-rc.44",
         "esbuild": "^0.17.19",
         "ts-node": "^10.9.1",
