--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,5 +59,5 @@ jobs:
                   generate_release_notes: true
                   append_body: true
                   prerelease: true
-                  tag_name: dev
-                  name: Latest Development Release
+                  tag_name: dev-release
+                  name: 最新开发版本
