--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "license": "LGPL-3.0",
     "packageManager": "yarn@3.6.0",
     "scripts": {
-        "dev": "ts-node ./dev.ts",
-        "build": "ts-node ./build.ts"
+        "dev": "NODE_ENV=development tsc && NODE_ENV=development ts-node ./build.ts",
+        "build": "NODE_ENV=production tsc && NODE_ENV=production ts-node ./build.ts"
     },
     "dependencies": {
         "@types/fs-extra": "^11.0.1",
