--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "qqnt-improved",
     "version": "0.0.1",
-    "license": "LGPL-3.0",
+    "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.0",
     "scripts": {
         "dev": "NODE_ENV=development tsc && NODE_ENV=development ts-node ./build.ts",
