--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.0",
     "scripts": {
-        "dev": "NODE_ENV=development tsc && NODE_ENV=development ts-node ./build.ts",
+        "dev": "NODE_ENV=development tsc; NODE_ENV=development ts-node ./build.ts",
         "build": "NODE_ENV=production tsc && NODE_ENV=production ts-node ./build.ts"
     },
     "dependencies": {
