--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
         "build": "NODE_ENV=production tsc && NODE_ENV=production ts-node ./build.ts"
     },
     "dependencies": {
-        "@types/fs-extra": "^11.0.1",
         "fs-extra": "^11.1.1",
         "semver": "^7.5.1"
     },
     "devDependencies": {
+        "@types/fs-extra": "^11.0.1",
         "@types/node": "^20.3.1",
         "@types/semver": "^7.5.0",
         "@yarnpkg/sdks": "^3.0.0-rc.45",
         "esbuild": "^0.18.2",
         "ts-node": "^10.9.1",
+        "typed-emitter": "^2.1.0",
         "typescript": "^5.1.3"
     }
 }
