--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
     "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.0",
     "scripts": {
-        "dev": "NODE_ENV=development tsc; NODE_ENV=development ts-node ./build.ts",
+        "dev": "( NODE_ENV=development tsc; NODE_ENV=development ts-node ./build.ts ) && cd dist && chmod +x ./install.sh && sudo ./install.sh",
         "build": "NODE_ENV=production tsc && NODE_ENV=production ts-node ./build.ts"
     },
     "dependencies": {
+        "@electron/asar": "^3.2.4",
+        "@electron/get": "^2.0.2",
+        "extract-zip": "^2.0.1",
         "fs-extra": "^11.1.1",
-        "semver": "^7.5.3"
+        "semver": "^7.5.3",
+        "ws": "^8.13.0"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.1",
         "@types/node": "^20.3.1",
         "@types/semver": "^7.5.0",
+        "@types/ws": "^8.5.5",
         "@yarnpkg/sdks": "^3.0.0-rc.46",
         "esbuild": "^0.18.6",
         "ts-node": "^10.9.1",
