feat(builtins/settings): add basic settings ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "CommonJS",
         "moduleResolution": "Node",
         "target": "ESNext",
+        "resolveJsonModule": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
         "outDir": "dist",
