--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/semver": "^7.5.0",
         "@yarnpkg/sdks": "^3.0.0-rc.48",
         "esbuild": "^0.18.11",
+        "rome": "12.1.3",
         "ts-node": "^10.9.1",
         "typed-emitter": "^2.1.0",
         "typescript": "^5.1.6"
