--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "qqnt-improved",
+    "private": true,
     "version": "1.6.1",
     "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.1",
+    "workspaces": [
+        "typings"
+    ],
     "scripts": {
         "dev": "NODE_ENV=development tsc & TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=development ts-node ./build.ts && chmod +x ./scripts/dev.sh && ./scripts/dev.sh",
         "build": "NODE_ENV=production tsc && TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=production ts-node ./build.ts",
@@ -11,6 +15,7 @@
         "format": "rome format . --write"
     },
     "dependencies": {
+        "@flysoftbeta/qqntim-typings": "workspace:*",
         "axios": "^1.4.0",
         "chii": "^1.9.0",
         "fs-extra": "^11.1.1",
