--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "version": "1.6.1",
     "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.1",
-    "workspaces": ["typings"],
+    "workspaces": [
+        "src/typings",
+        "src/builtins/*"
+    ],
     "scripts": {
         "dev": "NODE_ENV=development tsc & TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=development ts-node ./build.ts && chmod +x ./scripts/dev.sh && ./scripts/dev.sh",
         "build": "NODE_ENV=production tsc && TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=production ts-node ./build.ts",
