--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "module": "CommonJS",
         "moduleResolution": "Node",
         "target": "ESNext",
