feat(builtins/settings): add basic settings ui (#94)
* feat(builtins/settings): add basic settings ui

* feat(builtins/settings): update to plugin manifest v2

* refactor(nt-version): simplify code

* feat(builtins/settings): add Plugin Manager

* refactor(builtins/settings/panel): simplify code

* refactor: simplify code :)

* improve experience and fix bugs

* fix: temporarily fix Windows bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "module": "CommonJS",
         "moduleResolution": "Node",
         "target": "ESNext",
+        "resolveJsonModule": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
         "outDir": "dist",
