--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.1",
     "workspaces": [
-        "typings"
+        "src/typings",
+        "src/builtins/*"
     ],
     "scripts": {
         "dev": "NODE_ENV=development tsc & TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=development ts-node ./build.ts && chmod +x ./scripts/dev.sh && ./scripts/dev.sh",
         "build": "NODE_ENV=production tsc && TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=production ts-node ./build.ts",
+        "start": "chmod +x ./scripts/start.sh && ./scripts/start.sh",
         "lint": "rome check .",
         "lint:apply": "rome check . --apply",
         "format": "rome format . --write"
@@ -20,12 +22,16 @@
         "chii": "^1.9.0",
         "fs-extra": "^11.1.1",
         "portfinder": "^1.0.32",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "semver": "^7.5.4",
         "supports-color": "^9.4.0"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.1",
         "@types/node": "^20.4.0",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
         "@types/semver": "^7.5.0",
         "@yarnpkg/sdks": "^3.0.0-rc.48",
         "esbuild": "^0.18.11",
