--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "version": "2.0.0-alpha.4",
     "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.1",
-    "workspaces": ["src/typings", "src/builtins/*"],
+    "workspaces": [
+        "src/typings",
+        "src/builtins/*"
+    ],
     "scripts": {
         "dev": "NODE_ENV=development tsc & TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=development ts-node ./build.ts && chmod +x ./scripts/dev.sh && ./scripts/dev.sh",
         "build": "NODE_ENV=production tsc && TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=production ts-node ./build.ts",
@@ -14,6 +17,7 @@
         "format": "rome format . --write"
     },
     "dependencies": {
+        "@electron/remote": "^2.0.10",
         "@flysoftbeta/qqntim-typings": "workspace:*",
         "axios": "^1.4.0",
         "chii": "^1.9.0",
