--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,4 +69,4 @@ jobs:
               if: github.ref_type == 'tag'
               run: yarn workspace @flysoftbeta/qqntim-typings npm publish
               env:
-                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
