--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "dev": "NODE_ENV=development tsc & TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=development ts-node ./build.ts && chmod +x ./scripts/dev.sh && ./scripts/dev.sh",
         "build": "NODE_ENV=production tsc && TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=production ts-node ./build.ts",
-        "start": "chmod +x ./scripts/start.sh && ./scripts/start.sh",
+        "start:win": "powershell -ExecutionPolicy Unrestricted -File ./scripts/start.ps1",
+        "start:linux": "chmod +x ./scripts/start.sh && ./scripts/start.sh",
         "lint": "rome check .",
         "lint:apply": "rome check . --apply",
         "format": "rome format . --write"
