--- a/src/typings/package.json
+++ b/src/typings/package.json
@@ -1,15 +1,17 @@
 {
     "name": "@flysoftbeta/qqntim-typings",
     "private": false,
-    "version": "2.0.0",
+    "version": "2.0.1",
     "license": "LGPL-3.0-or-later",
     "publishConfig": {
         "access": "public"
     },
-    "devDependencies": {
+    "dependencies": {
         "@types/fs-extra": "^11.0.1",
         "@types/node": "^20.4.1",
-        "typed-emitter": "^2.1.0",
+        "typed-emitter": "^2.1.0"
+    },
+    "devDependencies": {
         "typescript": "^5.1.6"
     }
 }
