refactor: reorganize code * plugin manifest v3 * fix installation script bugs * organize code

--- a/src/builtins/settings/tsconfig.json
+++ b/src/builtins/settings/tsconfig.json
@@ -10,5 +10,5 @@
         "noEmit": true
     },
     "include": ["src"],
-    "exclude": ["node_modules", "**/node_modules/*","src/typings"]
+    "exclude": ["node_modules", "**/node_modules/*"]
 }
