--- a/src/typings/tsconfig.json
+++ b/src/typings/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "jsx": "react-jsx",
         "module": "CommonJS",
         "moduleResolution": "Node",
         "target": "ESNext",
@@ -9,6 +8,6 @@
         "strictFunctionTypes": true,
         "noEmit": true
     },
-    "include": ["src"],
-    "exclude": ["node_modules", "**/node_modules/*","src/typings"]
+    "include": ["index.d.ts","electron.d.ts"],
+    "exclude": ["node_modules", "**/node_modules/*"]
 }
