--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
     "version": "2.2.0",
     "license": "LGPL-3.0-or-later",
     "packageManager": "yarn@3.6.1",
-    "workspaces": ["src/typings", "src/builtins/*"],
+    "workspaces": ["src/electron", "src/typings", "src/builtins/*"],
     "scripts": {
-        "dev": "NODE_ENV=development tsc & TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=development ts-node ./build.ts",
-        "build": "NODE_ENV=production tsc && TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=production ts-node ./build.ts",
+        "dev": "TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=development ts-node ./build.ts",
+        "build": "TS_NODE_FILES=1 TS_NODE_TRANSPILE_ONLY=1 NODE_ENV=production ts-node ./build.ts",
+        "install:win": "QQNTIM_INSTALLER_NO_KILL_QQ=1 cmd /c start \"\" /wait cmd /c dist\\\\install.cmd",
+        "install:linux": "chmod +x ./dist/install.sh && QQNTIM_INSTALLER_NO_KILL_QQ=1 ./dist/install.sh",
         "start:win": "powershell -ExecutionPolicy Unrestricted -File ./scripts/start.ps1",
         "start:linux": "chmod +x ./scripts/start.sh && ./scripts/start.sh",
-        "lint": "rome check .",
+        "lint": "tsc && rome check .",
         "lint:apply": "rome check . --apply",
+        "lint:apply-unsafe": "rome check . --apply-unsafe",
         "format": "rome format . --write"
     },
     "dependencies": {
@@ -19,8 +22,8 @@
         "@flysoftbeta/qqntim-typings": "workspace:*",
         "axios": "^1.4.0",
         "chii": "^1.9.0",
+        "electron": "workspace:*",
         "fs-extra": "^11.1.1",
-        "portfinder": "^1.0.32",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "semver": "^7.5.4",
