--- a/src/builtins/settings/package.json
+++ b/src/builtins/settings/package.json
@@ -3,7 +3,9 @@
     "private": true,
     "devDependencies": {
         "@flysoftbeta/qqntim-typings": "workspace:*",
+        "@types/node": "^20.4.2",
         "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.7",
         "@types/unzipper": "^0.10.6"
     },
     "dependencies": {
